Archive2/a0/4314d5692ac62d/output
main.cpp: In function 'int main()':
main.cpp:13:19: error: lvalue required as decrement operand
     auto y = --x (); // does not compile
                   ^
